k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: share-my-status-svc
  namespace: share-my-status
  labels:
    app: share-my-status-svc
    service: share-my-status-svc
spec:
  ports:
    - port: 8080
      name: http
      protocol: TCP
  selector:
    app: share-my-status-app
