k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: share-my-status-frontend-svc
  namespace: share-my-status
  labels:
    app: share-my-status-frontend-svc
    service: share-my-status-frontend-svc
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: share-my-status-frontend-app
