k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: share-my-status-ingress
  namespace: share-my-status
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-mjclouds-com
spec:
  ingressClassName: higress
  tls:
    - secretName: share-my-status-cert
      hosts:
        - lark.mjclouds.com
        - status-sharing.mjclouds.com
  rules:
    - host: lark.mjclouds.com
      http:
        paths:
          - path: /api/v1/ws
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /link
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /s
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: share-my-status-frontend-svc
                port:
                  number: 80
    - host: status-sharing.mjclouds.com
      http:
        paths:
          - path: /api/v1/ws
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /link
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /s
            pathType: Prefix
            backend:
              service:
                name: share-my-status-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: share-my-status-frontend-svc
                port:
                  number: 80
